changed text rendering to fix display error with ubuntu - apostrophies and speech marks were not displaying correctly in chrome using optimizeLegibility

--- a/css/app.css
+++ b/css/app.css
@@ -6519,7 +6519,7 @@ p {
   font-size: 1rem;
   line-height: 1.6;
   margin-bottom: 1.25rem;
-  text-rendering: optimizeLegibility;
+  text-rendering: auto;
 }
 /* line 171, ../bower_components/foundation/scss/foundation/components/_type.scss */
 p.lead {
@@ -6540,7 +6540,7 @@ h1, h2, h3, h4, h5, h6 {
   font-weight: 300;
   font-style: normal;
   color: #222222;
-  text-rendering: optimizeLegibility;
+  text-rendering: auto;
   margin-top: 0.2rem;
   margin-bottom: 0.5rem;
   line-height: 1.4;
@@ -9554,28 +9554,28 @@ th.hide-for-touch {
   font-family: 'Ubuntu';
   font-style: normal;
   font-weight: 300;
-  src: local("Ubuntu Light"), local("Ubuntu-Light"), url(http://themes.googleusercontent.com/static/fonts/ubuntu/v5/WtcvfJHWXKxx4x0kuS1kobO3LdcAZYWl9Si6vvxL-qU.woff) format("woff");
+  src: local("Ubuntu Light"), local("Ubuntu-Light"), url(http://themes.googleusercontent.com/static/fonts/ubuntu/v5/_aijTyevf54tkVDLy-dlnLO3LdcAZYWl9Si6vvxL-qU.woff) format("woff");
 }
 
 @font-face {
   font-family: 'Ubuntu';
   font-style: normal;
   font-weight: 500;
-  src: local("Ubuntu Medium"), local("Ubuntu-Medium"), url(http://themes.googleusercontent.com/static/fonts/ubuntu/v5/gMhvhm-nVj1086DvGgmzB7O3LdcAZYWl9Si6vvxL-qU.woff) format("woff");
+  src: local("Ubuntu Medium"), local("Ubuntu-Medium"), url(http://themes.googleusercontent.com/static/fonts/ubuntu/v5/OsJ2DjdpjqFRVUSto6IffLO3LdcAZYWl9Si6vvxL-qU.woff) format("woff");
 }
 
 @font-face {
   font-family: 'Ubuntu';
   font-style: italic;
   font-weight: 300;
-  src: local("Ubuntu Light Italic"), local("Ubuntu-LightItalic"), url(http://themes.googleusercontent.com/static/fonts/ubuntu/v5/DZ_YjBPqZ88vcZCcIXm6VqfTCPadK0KLfdEfFtGWCYw.woff) format("woff");
+  src: local("Ubuntu Light Italic"), local("Ubuntu-LightItalic"), url(http://themes.googleusercontent.com/static/fonts/ubuntu/v5/DZ_YjBPqZ88vcZCcIXm6VrrIa-7acMAeDBVuclsi6Gc.woff) format("woff");
 }
 
 @font-face {
   font-family: 'Ubuntu';
   font-style: italic;
   font-weight: 500;
-  src: local("Ubuntu Medium Italic"), local("Ubuntu-MediumItalic"), url(http://themes.googleusercontent.com/static/fonts/ubuntu/v5/ohKfORL_YnhBMzkCPoIqwqfTCPadK0KLfdEfFtGWCYw.woff) format("woff");
+  src: local("Ubuntu Medium Italic"), local("Ubuntu-MediumItalic"), url(http://themes.googleusercontent.com/static/fonts/ubuntu/v5/ohKfORL_YnhBMzkCPoIqwrrIa-7acMAeDBVuclsi6Gc.woff) format("woff");
 }
 
 @font-face {
